# context-compressor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
context_compressor/: __init__.py
context_compressor/adapters/: __init__.py  anthropic_adapter.py  openai_adapter.py
context_compressor/compression/: __init__.py  compressor.py  config.py  summarizer.py  token_counter.py
context_compressor/scoring/: __init__.py  scorer.py  signals.py
examples/: anthropic_chatbot.py  basic_usage.py  openai_chatbot.py
tests/benchmark/: benchmark_compression.py
tests/unit/: test_adapters.py  test_compressor.py  test_scorer.py  test_summarizer.py
