[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-compressor"
version = "0.1.0"
description = "Intelligent conversation context compression for LLM applications. Keep infinite conversations within any context window — zero extra API calls."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Salvatore Ferro", email = "salvoferro16@gmail.com" }]
keywords = ["llm", "context-window", "compression", "openai", "anthropic", "memory", "conversation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tiktoken>=0.7.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.25.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/SalvatoreFerro/context-compressor"
Documentation = "https://github.com/SalvatoreFerro/context-compressor#readme"
Issues = "https://github.com/SalvatoreFerro/context-compressor/issues"

[tool.hatch.build.targets.wheel]
packages = ["context_compressor"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.9"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=context_compressor --cov-report=term-missing"
